<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- App name -->
    <string name="app_name" translatable="false">FitHelper</string>

    <!-- Fragments name -->
    <string name="fragment_guide" translatable="false">GuideFragment</string>
    <string name="fragment_home" translatable="false">HomeFragment</string>

    <!-- Menu -->
    <string name="home">Домой</string>
    <string name="guide">Руководство</string>
    <string name="workouts">Тренировки</string>
    <string name="profile">Профиль</string>

    <!-- Workout -->
    <string name="workout_name">Название тренировки</string>
    <string name="count_approaches">Количество подходов</string>
    <string name="workout_date">Дата тренировки</string>
    <string name="placeholder_workout_date">Дата тренировки: %s</string>
    <string name="specify_workout_date">Укажите дату тренировки</string>

    <!-- Exercise -->
    <string name="exercise_name">Название упражнения</string>
    <string name="count_repeats">Количество повторений</string>
    <string name="exercise_total_count">Всего упражнений</string>
    <string name="weight">Вес</string>

    <string name="placeholder_count_approaches">Подходов: %d</string>
    <string name="placeholder_count_repeats">Повторений: %d</string>
    <string name="placeholder_weigh">Вес: %d</string>


    <!-- Symbols -->
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus_minus" translatable="false">--</string>
    <string name="plus_plus" translatable="false">++</string>

    <!-- Actions -->
    <string name="sign_out">Выход из аккаунта</string>
    <string name="change">Изменить</string>
    <string name="add_exercise">Добавить упражнение</string>
    <string name="add_workout">Добавить тренировку</string>
    <string name="remove_workout">Удалить тренировку</string>

    <!-- Messages -->
    <string name="hello_user">Привет, %s!</string>
    <string name="no_exercises">Упражнений нет</string>
    <string name="placeholder_exercise_total_count">Всего упражнений: %d</string>
    <string name="hello_empty_user">Привет!</string>

    <!-- Confirm dialog -->
    <string name="confirmation_delete_workout">Вы действительно хотите удалить данную тренировку?</string>
    <string name="confirm">Да</string>
    <string name="cancel">Нет</string>

    <string name="emailAddress">Адрес эл. почты</string>
    <string name="password">Пароль</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="have_not_account">Нет аккаунта?\u00A0</string>
    <string name="register">Зарегистрируйтесь</string>
    <string name="registration">Регистрация</string>
    <string name="sign_up">Зарегистрироваться</string>


    <string name="try_again">Пожалуйста, попробуйте снова</string>
    <string name="fill_all_details_to_sign_in">Заполните данные об электронной почте и пароле для входа</string>
    <string name="fill_all_registration_details">Заполните все данные для регистрации</string>
    <string name="password_mismatch">Пароли не совпадают</string>
    <string name="empty_username">Введите имя пользователя"</string>
    <string name="settings">Настройки</string>
    <string name="maximum_weight">Предельный вес</string>
    <string name="username">Имя пользователя</string>
    <string name="skip">Пропустить</string>
    <string name="confirm_information">Подтвердить данные</string>
    <string name="enter_data">Введите данные: \n(позже их можно будет изменить)</string>
    <string name="sign_in_with">Войти с помощью</string>
    <string name="Login">Вход</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sign_in">Войти в систему</string>
    
    <string name="enter_email" >Введите почту</string>
    <string name="check_email_for" >Проверьте почту, чтобы %s</string>
    <string name="change_password" >изменить пароль</string>
    <string name="reset_password" >Восстановить пароль</string>

</resources>