<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.mainActivity.workouts.createWorkout.CreateWorkoutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <EditText
            android:id="@+id/workoutNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ems="10"
            android:hint="@string/workout_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workoutNameEditText">

            <TextView
                android:id="@+id/workoutDateTextView"
                style="@style/TextViewStyle"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/workout_date"
                android:textSize="18sp" />

            <Button
                android:id="@+id/changeWorkoutDateButton"
                style="@style/AppButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/change" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:listitem="@layout/item_exercise" />

        <GridLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView">

            <Button
                android:id="@+id/addExercisesButton"
                android:textSize="11sp"
                style="@style/AppButtonStyle"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_exercise" />

            <Button
                android:id="@+id/confirmWorkoutCreationButton"
                android:layout_gravity="end"
                style="@style/AppButtonStyle"
                android:textSize="11sp"
                android:layout_marginEnd="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_workout" />

        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>