<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.authenticationActivity.forgotPassword.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/ethna_demo"

            android:text="@string/forgot_password"
            android:textAlignment="textStart"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailForResetPasswordET"
            android:layout_width="242dp"
            android:layout_height="59dp"
            android:ems="10"
            android:hint="@string/emailAddress"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/resetPasswordBTN"
            style="@style/AppButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/reset_password"
            app:layout_constraintEnd_toEndOf="@+id/emailForResetPasswordET"
            app:layout_constraintStart_toStartOf="@+id/emailForResetPasswordET"
            app:layout_constraintTop_toBottomOf="@+id/emailForResetPasswordET" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>