<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorBackgroundFloating"
                android:orientation="vertical"

                app:layout_constraintEnd_toEndOf="@+id/isCompleteCheckBox"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:id="@+id/exerciseNameTV"
                    style="@style/TextViewStyle"
                    android:text="@string/exercise_name"
                    android:textSize="18sp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="2dp" />

                <TextView
                    android:id="@+id/exerciseSetsTV"
                    style="@style/TextViewStyle"
                    android:text="@string/count_approaches"
                    android:textSize="16sp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp" />

                <TextView
                    android:id="@+id/exerciseRepsTV"
                    style="@style/TextViewStyle"
                    android:text="@string/count_repeats"
                    android:textSize="16sp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp" />

                <TextView
                    android:id="@+id/exerciseWeightTV"
                    style="@style/TextViewStyle"
                    android:text="@string/weight"
                    android:textSize="16sp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="4dp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/isCompleteCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_gravity="center"
                android:text=""
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:scaleX="1.4"
                android:scaleY="1.4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>